--- a/css/styles.css
+++ b/css/styles.css
@@ -7,17 +7,147 @@
 	Off-Black    #2b2e37;
 */
 
-body {
-    font-family: 'Assistant', sans-serif;
+main {
+	max-width: 960px;
+	margin: auto;
 }
 
-/* Mobile View */
+body {
+	font-family: 'Assistant', sans-serif;
+	background-color: #393b47;
+}
 
+h1 {
+	color: #fff;
+
+}
+
+h2 {
+	color: #393b47;
+}
+
+.caption {
+	display: flex;
+	padding-top: 1.5rem;
+	font-weight: 200;
+}
+
+.header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #c54b3c;
+	padding: 1rem;
+	font-weight: 200;
+}
+
+.wide-flex {
+	display: flex;
+	
+}
+
+.flex-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	
+}
+
+.box {
+	max-width: calc(100% / 2 - 1rem);
+    background-color: #fff;
+	padding: 1rem;
+	margin: 0.5rem;
+}
+
+aside {
+	color: #fff;
+	background-color: #2b2e37;
+	padding-left: 0.5rem;
+	padding-right: 3rem;
+	padding-top: 1rem;
+	font-weight: 200;
+	margin: 0.5rem;
+}
+
+footer {
+	background-color: #2b2e37;
+	display: flex;
+	color: #fff;
+	justify-content: center;
+	padding: 1.5rem;
+	margin-top: 3rem;
+	font-weight: 200;
+}
+
+a {
+	color: #fff;
+	font-weight: 200;
+}
+/* Mobile View */
+@media (max-width: 150px), (max-height: 120px) {
+
+	.header, .caption {
+		display: flex;
+		justify-content: center;
+		font-size: 0.25rem;
+	}
+
+	.wide-flex {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.flex-container {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	img {
+		max-width: 50%;
+		max-height: 50%;
+	}
+
+}
 
 
 /* Medium View */
+@media (max-width: 370px), (max-height: 300px) {
 
+	.header, .caption {
+		font-size: 1.5rem;
+		padding-left: 1rem;
+	}
+
+	.box {
+		max-width: calc(100% / 3 - 0.4rem);
+		background-color: #fff;
+		padding: 0.25rem;
+		margin: 0.25rem;
+	}
+
+	aside {
+		max-width: calc(100% / 3 - 0.25rem);
+	}
+}
 
 
 /* Largest View */
 
+@media (max-width: 500px), (max-height: 400px) {
+	
+	.header, .caption {
+		font-size: 1rem;
+		padding-left: 0.5rem;
+	}
+
+	h2, p, aside, footer {
+		font-size: 0.5rem;
+	}
+
+	.box {
+		padding: 0.25rem;
+		margin: 0.25rem;
+	}
+
+}
